cambios visuales, principalmente barra superior y colores respetando el diseño flat. ademas se crea un esquema de la grafica de la pagina principal.

--- a/style/flat-ui.css
+++ b/style/flat-ui.css
@@ -1028,8 +1028,8 @@ h6 {
   color: #1abc9c;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle .caret {
-  border-bottom-color: #1abc9c !important;
-  border-top-color: #1abc9c !important;
+  border-bottom-color: #1abc9c;
+  border-top-color: #1abc9c;
 }
 .navbar .nav li.dropdown.open .dropdown-menu {
   opacity: 1;
