--- a/style/main.css
+++ b/style/main.css
@@ -17,6 +17,106 @@ a:hover {	text-decoration: underline}
 
 #variable{min-height: 1180px;}
 
+/* css para la estrella*/
+
+#star-five {
+   margin-top: 7px;
+   margin-right: 30px;
+   position: relative;
+   display: block;
+   color: #ECF0F1;
+   width: 0px;
+   height: 0px;
+   border-right:  35px solid transparent;
+   border-bottom: 24px  solid #ECF0F1;
+   border-left:   35px solid transparent;
+   -moz-transform:    rotate(35deg);
+   -webkit-transform: rotate(35deg);
+   -ms-transform:     rotate(35deg);
+   -o-transform:      rotate(35deg);
+}
+#star-five:before {
+   border-bottom: 28px solid #ECF0F1;
+   border-left: 11px solid transparent;
+   border-right: 11px solid transparent;
+   position: absolute;
+   height: 0;
+   width: 0;
+   top: -15px;
+   left: -23px;
+   display: block;
+   content: '';
+   -webkit-transform: rotate(-35deg);
+   -moz-transform:    rotate(-35deg);
+   -ms-transform:     rotate(-35deg);
+   -o-transform:      rotate(-35deg);
+
+}
+#star-five:after {
+   position: absolute;
+   display: block;
+   color: #ECF0F1;
+   top: 3px;
+   left: -37px;
+   width: 0px;
+   height: 0px;
+   border-right: 35px solid transparent;
+   border-bottom: 24px solid #ECF0F1;
+   border-left: 35px solid transparent;
+   -webkit-transform: rotate(-70deg);
+   -moz-transform:    rotate(-70deg);
+   -ms-transform:     rotate(-70deg);
+   -o-transform:      rotate(-70deg);
+   content: '';
+}
+
+/*navbar colores de los items*/
+
+
+
+.navbar .nav li a
+{
+	color: #ECF0F1 !important;
+}
+
+.navbar .nav li a:hover
+{
+	text-shadow: -3px 0 #D35400, 0 3px #D35400, 3px 0 #D35400, 0 -3px #D35400;
+	font-size: 18px !important;
+}
+
+.navbar .nav li.dropdown > .dropdown-toggle .caret
+{
+	border-bottom-color: #ECF0F1 !important;
+	border-top-color: #ECF0F1 !important;
+}
+
+.navbar .nav li.dropdown.open > .dropdown-toggle .caret
+{
+	border-bottom-color: #D35400 !important;
+	border-top-color: #D35400 !important;
+}
+
+.navbar .nav li.dropdown .dropdown-menu
+{
+	background-color: #E67E22 !important;
+}
+
+.navbar .nav li.dropdown .dropdown-menu:after
+{
+	border-bottom-color: #E67E22 !important;
+}
+
+.navbar .nav ul a:hover
+{
+	background-color: transparent !important; 
+
+}
+
+.navbar .nav ul li
+{
+	background-color: transparent !important; 
+}
 
 /*bg like and dilike vote button */
 
@@ -184,29 +284,6 @@ padding-bottom: 5%;
 	font-family: Georgia, serif;
 }
 
-/* formato tabs menu*/
-
-.menu
-{
-	text-align: center;
-    cursor: pointer;
-    padding-right:1%;
-    padding-left:1%;
-    padding-top: 4%;
-    margin-right: -2%; 
-    border-right: 1px solid #3c3c3c !important;
-
-}
-
-.menu:hover
-{
-	background-color: #2c2c2c !important;
-	height:100%;
-	text-decoration: none !important;
-	color: white !important;
-}
-
-
 
 /* Play que aparece sobre imagen de video*/
 .fade_new {
@@ -267,11 +344,12 @@ padding-bottom: 5%;
 
 /* Select estilo flat*/
 .styled select {
-   background: transparent;
    width: 150px;
    padding-left: 5%;
    font-size: 16px;
-   border: 1px solid white;
+   border: 1px solid #E74C3C;
+   color: white;
+   background: url('../img/sort_desc_disabled.png') no-repeat 96% 35% #E74C3C;
    height: 41px;
     -webkit-appearance: none;
 } 
@@ -281,7 +359,6 @@ padding-bottom: 5%;
    width: 120px;
    height: 41px;
    overflow: hidden;
-   background: url('../img/sort_desc_disabled.png') no-repeat 96% 35% white;
 }
 
 /* Modal para agregar video */
@@ -424,10 +501,11 @@ div.space4
 }
 
 
-/* Fondo Contenido */
-div.content
+/* Fondo pagina principal */
+div.home
 {
-	background: url('../img/bg_viddon.png') no-repeat;
+	border-top: 30px solid white;	
+	background: url('../img/bg_ganando.png') no-repeat;
 	background-size: 100% auto;
 }
 
@@ -487,7 +565,7 @@ img#image_casting
 #content div.row-fluid
 {	
 	position: relative;
-	background: url('../img/test_bg.png');
+	background-color: #ECF0F1;
 	max-width: 98%;
 	left: 10px;
 }
@@ -535,43 +613,25 @@ div.video_text_main
 {
 	position: relative;
 	left: -2.5%;
-	top: -25px;
-	background: white !important;
+	top: -20px;
+	background:  #E74C3C  !important;
 	box-shadow: 01px 01px 01px #E2E2E2; 
 }
 
 .home-video-title
 {
-	color: #6699CC;
-	font-size: 14px;
+	color: white;
+	font-size: 15px;
 	font-weight: bold;
+	text-shadow: -3px 0 #C0392B, 0 3px #C0392B, 3px 0 #C0392B, 0 -3px #C0392B;
+
 }
 
 span.home-video-author
 {
 	font-size: 12px;
-	color: #979797;
+	color: #ECF0F1;
 	font-weight: bold;
-}
-
-.home-video-author
-{
-	font-size: 12px;
-	position: relative;
-	top: -10px;
-	color: #646464;
-	font-weight: bold;
-}
-
-a.home-video-author:hover
-{
-	color: #6699CC;
-}
-
-
-.fb-button
-{
-	margin-top: 15px;
 }
 
 div.row_text_main
@@ -588,9 +648,9 @@ span.arrow {
 	top: -30px;
 	left: 40px;
 	bottom: 0;
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
-	border-bottom: 8px solid white;
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-bottom: 12px solid #E74C3C;
 	z-index: 12;
 }
 
