se agrega pop up cuando se quiere participar y no esta registrado. cambio color de boton, cambio del bg y la animacion del logo

--- a/style/flat-ui.css
+++ b/style/flat-ui.css
@@ -2287,13 +2287,13 @@ textarea[class*="span"] {
   padding-bottom: 9px;
 }
 .tooltip.top .tooltip-arrow {
-  border-top-color: #34495e;
+  border-top-color: #D35400;
   border-width: 9px 9px 0;
   bottom: 0;
   margin-left: -9px;
 }
 .tooltip.right .tooltip-arrow {
-  border-right-color: #34495e;
+  border-right-color: #D35400;
   border-width: 9px 9px 9px 0;
   margin-top: -9px;
   left: -3px;
@@ -2302,23 +2302,23 @@ textarea[class*="span"] {
   padding-top: 8px;
 }
 .tooltip.bottom .tooltip-arrow {
-  border-bottom-color: #34495e;
+  border-bottom-color: #D35400;
   border-width: 0 9px 9px;
   margin-left: -9px;
   top: -1px;
 }
 .tooltip.left .tooltip-arrow {
-  border-left-color: #34495e;
+  border-left-color: #D35400;
   border-width: 9px 0 9px 9px;
   margin-top: -9px;
   right: -3px;
 }
 .tooltip-inner {
-  background-color: #34495e;
+  background-color: #D35400;
   line-height: 17.99px;
-  padding: 12px 12px;
+  padding: 8px 8px;
   text-align: center;
-  width: 183px;
+  width: 125px;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
