Ahora al momento de hacer submit a una trivia muestra un mensaje de felicitaciones. Al momento de crear un concurso. al hacer click en publicar aparece un aviso de advertencia de si está seguro o no d publicar el concurso

--- a/style/main.css
+++ b/style/main.css
@@ -43,6 +43,12 @@ body
 	background-color:#F1C40F
 }
 
+/* Estilo del modal que muestra un mensaje de felicitaciones al postular a un concurso */
+#postulation-result
+{
+	margin-top: -10% !important;
+}
+
 /* Estilo para los contenedores de informacion al hacer click en Concursar en los modales */
 .upload-content {
 	display: none;
