se termina de implementar concurso de imagenes.

--- a/style/main.css
+++ b/style/main.css
@@ -86,10 +86,43 @@ body
 
 }
 
-.video-content
+.photo-content
 {
-	padding-left: 2%;
+	padding-left: 3%;
 	padding-right: 3.5%;	
+}
+
+.photo-container
+{
+
+	width:100%; 
+
+	/* Internet Explorer 10 */
+	display:-ms-flexbox;
+	-ms-flex-pack:center;
+	-ms-flex-align:center;
+
+	/* Firefox */
+	display:-moz-box;
+	-moz-box-pack:center;
+	-moz-box-align:center;
+
+	/* Safari, Opera, and Chrome */
+	display:-webkit-box;
+	-webkit-box-pack:center;
+	-webkit-box-align:center;
+
+	/* W3C */
+	display:box;
+	box-pack:center;
+	box-align:center;
+
+	height:250px; 
+	max-height:250px; 
+	max-width:100%;
+	background-color:#ECF0F1; 
+	border: 3px solid #BDC3C7;
+
 }
 
 
