--- a/style/main.css
+++ b/style/main.css
@@ -672,11 +672,13 @@ div.home-video-countdown
 	margin-bottom: 2%;
 }
 
-div.home-video-countdown label
+/*
+.countdown
 {
-	padding-left: 20%;
+	
 	padding-top: 2%;
 }
+*/
 
 div.row_text_main
 {
