--- a/style/main.css
+++ b/style/main.css
@@ -21,7 +21,7 @@ body
 
 .contest-close-container
 {
-	background-color:#3498DB; 
+	background-color:#4da0d8; 
 	margin-top:10px; 
 	height:40px; 
 	width:11.8% !important; 
@@ -30,7 +30,7 @@ body
 
 .contest-title
 {
-	background-color:#3498DB; 
+	background-color:#4da0d8; 
 	text-align: center; 
 	position:relative; 
 	z-index:-1; 
@@ -683,7 +683,7 @@ div.video_text_main
 .home-video-title
 {
 	color: white;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: bold;
 	text-shadow: -2px 0 #D35400, 0 2px #D35400, 2px 0 #D35400, 0 -2px #D35400;
 
