--- a/style/main.css
+++ b/style/main.css
@@ -5,6 +5,48 @@ body
 
 }
 
+
+.ui-accordion-header 
+{
+	background: #4da0d8 !important;
+	color: #FFF !important;
+	border: 2px solid #2980B9 !important;
+}
+
+.ui-accordion-content
+{
+	text-align: justify;
+	color: #34495E !important;
+
+}
+
+.ui-accordion-header-icon
+{
+	width: 0 !important; 
+	height: 0 !important;
+	line-height: 0 !important;
+	border-left: 10px solid #34495E;
+	border-top: 5px solid transparent;
+	border-bottom: 5px solid transparent;
+	top: 63% !important; 
+	left: 3% !important;
+	background: transparent !important;
+}
+
+.ui-accordion-header:hover .ui-accordion-header-icon
+{
+	
+	border-left: 10px solid #fff;
+}
+
+.ui-state-active .ui-accordion-header-icon
+{
+	border-top: 8px solid #fff !important;
+   border-left: 6px solid transparent !important; 
+   border-right: 6px solid transparent !important; 
+   border-bottom: 0 !important;
+}
+
 /* estilo elementos modal concurso*/
 
 .contest-close
