--- a/style/main.css
+++ b/style/main.css
@@ -24,7 +24,7 @@ html, body {
 
 @font-face {
     font-family: 'ganandofont'; /*a name to be used later*/
-    src: url('../fonts/soupofjustice.ttf'); /*URL to font*/
+    src: url('../fonts/walibi-holland.ttf'); /*URL to font*/
 }
 
 
