--- a/style/main.css
+++ b/style/main.css
@@ -520,7 +520,7 @@ div.video_text_main
 .home-video-title
 {
 	color: white;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: bold;
 	text-shadow: -2px 0 #D35400, 0 2px #D35400, 2px 0 #D35400, 0 -2px #D35400;
 
@@ -535,13 +535,20 @@ span.home-video-author
 
 div.home-video-countdown
 {
-	width: 60%;
+	width: 100%;
 	height: 33px;
 	color: white;
 	background: url("../img/reloj_arena.png") no-repeat left bottom;
 	margin-bottom: 2%;
 }
 
+div.home-video-countdown div
+{
+	width: 100%;
+	margin-left: -10%;
+	padding-top: 1.5%;
+	font-size: 18px;
+}
 
 div.row_text_main
 {
