--- a/style/jquery.dataTables.css
+++ b/style/jquery.dataTables.css
@@ -4,16 +4,20 @@
  */
 table.dataTable {
 	margin: 0 auto;
+	border: 1px solid #BDC3C7;
 	clear: both;
 	width: 100%;
 }
 
 table.dataTable thead th {
 	padding: 3px 18px 3px 10px;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #BDC3C7;
 	font-weight: bold;
 	cursor: pointer;
 	*cursor: hand;
+	background-color: #F39C12;
+	color: white !important;
+	vertical-align: middle;
 }
 
 table.dataTable tfoot th {
@@ -64,6 +68,7 @@ table.dataTable tr.even td.sorting_3 { background-color: #F9F9FF; }
 	position: relative;
 	clear: both;
 	*zoom: 1;
+	margin-left:20px;
 }
 
 
@@ -81,8 +86,12 @@ table.dataTable tr.even td.sorting_3 { background-color: #F9F9FF; }
 .dataTables_filter {
 	float: right;
 	text-align: right;
+	margin-top: -5px;
 }
 
+.dataTables_filter input{
+	width: 70% !important;
+}
 
 /*
  * Table information
