--- a/style/main.css
+++ b/style/main.css
@@ -188,8 +188,9 @@ input[type=file]{
 #des{
 	position:absolute; 
 	width:27%; 
-	height:200px; 
-	background-color:#3498DB
+	height:120px; 
+	background-color:#3498DB;
+	padding-top:80px;
 }
 
 #pri
@@ -197,17 +198,19 @@ input[type=file]{
 	right:1.5%; 
 	position:absolute; 
 	width:27%; 
-	height:200px; 
-	background-color:#2ECC71
+	height:120px; 
+	background-color:#2ECC71;
+	padding-top:80px;
 }
 
 #bas
 {
 	position:absolute; 
 	width:27%; 
-	height:200px; 
+	height:120px; 
 	bottom:15%; 
-	background-color:#F39C12
+	background-color:#F39C12;
+	padding-top:80px;
 }
 
 #ste
@@ -215,10 +218,12 @@ input[type=file]{
 	right:1.5%;  
 	position:absolute;  
 	width:27%; 
-	height:200px; 
+	height:120px; 
 	bottom:15%; 
-	background-color:#F1C40F
+	background-color:#F1C40F;
+	padding-top:80px;
 }
+
 
 .tag
 {
