--- a/style/main.css
+++ b/style/main.css
@@ -188,7 +188,6 @@ input[type=file]{
 #des{
 	position:absolute; 
 	width:27%; 
-	height:120px; 
 	background-color:#3498DB;
 	padding-top:80px;
 }
@@ -198,7 +197,6 @@ input[type=file]{
 	right:1.5%; 
 	position:absolute; 
 	width:27%; 
-	height:120px; 
 	background-color:#2ECC71;
 	padding-top:80px;
 }
@@ -207,7 +205,6 @@ input[type=file]{
 {
 	position:absolute; 
 	width:27%; 
-	height:120px; 
 	bottom:15%; 
 	background-color:#F39C12;
 	padding-top:80px;
@@ -218,21 +215,72 @@ input[type=file]{
 	right:1.5%;  
 	position:absolute;  
 	width:27%; 
-	height:120px; 
 	bottom:15%; 
 	background-color:#F1C40F;
 	padding-top:80px;
 }
 
 
-.tag
-{
-	font-size:11px !important; 
-	padding:1% !important;
-	margin-right:1% !important; 
-	margin-top:1% !important; 
-	border-radius:0 !important;
+.tags{
+	margin:0;
+	padding:0;s
+	list-style:none;
 }
+
+.tags li, .tags a
+{
+	float:left;
+	height:24px;
+	line-height:24px;
+	position:relative;
+	font-size:11px;
+}
+
+.tags a{
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#34495e;
+	color:#fff;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;	
+} 
+
+.tags a:before{
+	content:"";
+	float:left;
+	position:absolute;
+	top:0;
+	left:-12px;
+	width:0;
+	height:0;
+	border-color:transparent #34495e transparent transparent;
+	border-style:solid;
+	border-width:12px 12px 12px 0;		
+}
+
+.tags a:after{
+	content:"";
+	position:absolute;
+	top:10px;
+	left:0;
+	float:left;
+	width:4px;
+	height:4px;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	background:#fff;
+	-moz-box-shadow:-1px -1px 2px #004977;
+	-webkit-box-shadow:-1px -1px 2px #004977;
+	box-shadow:-1px -1px 2px #004977;
+}
+
+.tags a:hover{color:#3498DB;}	
 
 
 .chozen-control-group .chzn-container
